# ceylon

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TEST_SUMMARY.md  check-db.ts  eslint.config.mjs  feedback-collector.skill  food-seed-7d.json  mcp.json  middleware.ts  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  pyproject.toml  test-login-browser.mjs  test_all_stages.py  test_quick.sh  test_stage1.py  test_stage2.py  test_stage3.py  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
cli/: package-lock.json  package.json
components/: AnalyticsTracker.tsx  AuthProvider.tsx  CommandPalette.tsx  LanguageSwitcher.tsx  Logo.tsx  MainLayout.tsx  PWARegister.tsx  PublicNavbar.tsx  SEO.tsx  ThemeProvider.tsx  UserSearch.tsx
config/: config.example.yaml
data/: analyzed_requirements.json  duplicate_check.json  feishu_analyzed.json  feishu_analyzed_final.json  feishu_analyzed_latest.json  feishu_duplicate_check.json  feishu_duplicate_check_latest.json  feishu_duplicate_final.json  feishu_raw.json  feishu_requirements.json  feishu_requirements_fresh.json  feishu_requirements_latest.json
docs/: ADMIN_BLOG_FEATURE.md  AUTH_ARCHITECTURE.md  PROFILE_FIELDS.md  TECHNICAL_GUIDE.md  USER_AUTH_COMPLETE.md  architecture.md  feishu_api_guide.md  feishu_setup.md  requirement_classification_spec.md  requirement_with_context_example.md  reset-password.md  start.md  testing.md
hooks/: useAuth.ts  usePWA.ts
i18n/: config.ts  request.ts
lib/: api-route-helpers.ts  client-api.ts  selectOptionColors.ts  session-client.ts  storage.ts  supabase-env.ts  supabase-server.ts  supabase.ts  version-view-data.ts
messages/: en.json  ja.json  zh.json
output/: AUTH_TEST_REPORT.md  E2E_TEST_REPORT.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  (+6 more)
(+232 files in other folders)
